--- a/web/package.json
+++ b/web/package.json
@@ -26,8 +26,14 @@
   },
   "packageManager": "pnpm@7.1.8",
   "dependencies": {
+    "@hypercerts-org/hypercerts-protocol": "^0.0.10",
+    "@hypercerts-org/hypercerts-sdk": "^0.0.28",
+    "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^5.0.20",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "13.1.1",
+    "@openzeppelin/merkle-tree": "^1.0.2",
+    "@plasmicapp/loader-nextjs": "^1.0.232",
     "@prisma/client": "^4.8.1",
     "@radix-ui/react-accessible-icon": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.0",
@@ -56,11 +62,13 @@
     "@radix-ui/react-toggle-group": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.3",
     "@rainbow-me/rainbowkit": "0.8.1",
+    "@supabase/supabase-js": "^2.8.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/query-core": "^4.3.8",
     "@tanstack/react-query": "^4.3.9",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "@turbo-eth/core-wagmi": "0.0.0-beta.4",
     "@turbo-eth/erc20-wagmi": "0.0.0-beta.8",
     "@turbo-eth/erc721-wagmi": "0.0.0-beta.5",
@@ -73,28 +81,38 @@
     "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "ethers": "5.7.2",
     "focus-trap-react": "^10.0.2",
+    "formik": "^2.2.9",
+    "formik-mui-x-date-pickers": "^0.0.1",
     "framer-motion": "^8.4.3",
+    "html2canvas": "^1.4.1",
+    "hypercerts-protocol": "link:@types/hypercerts-org/hypercerts-protocol",
     "iron-session": "^6.3.1",
     "jotai": "^1.13.0",
     "ky": "^0.33.2",
     "ky-universal": "^0.11.0",
+    "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
     "luxon": "^3.2.1",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
+    "qs": "^6.11.0",
     "query-string": "^8.1.0",
     "react": ">=17",
     "react-dom": ">=17",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.4",
     "react-modal": "^3.16.1",
     "react-modal-hook": "^3.0.2",
     "react-native": "0.71.0",
+    "react-query-devtools": "link:@types/tanstack/react-query-devtools",
     "react-responsive": "^9.0.2",
     "react-spring": "^9.6.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.1",
     "react-use-keypress": "^1.3.1",
     "react-wrap-balancer": "^0.3.0",
     "siwe": "1.1.6",
@@ -102,7 +120,8 @@
     "tailwind-merge": "^1.8.1",
     "tailwindcss": "^3.2.4",
     "usehooks-ts": "^2.9.1",
-    "wagmi": "~0.11.0"
+    "wagmi": "~0.11.0",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
@@ -110,8 +129,10 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@svgr/webpack": "^6.5.1",
     "@tsconfig/next": "^1.0.4",
+    "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
     "@types/node": "^17.0.31",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@wagmi/cli": "^0.1.2",
