--- a/web/package.json
+++ b/web/package.json
@@ -116,6 +116,7 @@
     "@types/react-dom": "18.0.10",
     "@wagmi/cli": "^0.1.2",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.51.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
