feat: add stub hypertcerts querying

--- a/web/.env.example
+++ b/web/.env.example
@@ -12,6 +12,10 @@ NEXT_PUBLIC_INFURA_API_KEY=
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Private Variables
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Hypercerts storage api tokens
+NFT_STORAGE_TOKEN="your-api-token"
+WEB3_STORAGE_TOKEN="your-api-token"
+
 # Generate one here: https://generate-secret.vercel.app/32
 NEXTAUTH_SECRET=
 
