--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "prettier": "prettier './src' --write",
     "wagmi:init": "wagmi init",
     "wagmi:generate": "wagmi generate",
-    "bountyxlib:build": "cd ../packages/bountyx-lib && yarn && yarn build && cd ../../web",
+    "bountyxlib:clean": "rm -rf ./bountyxlib/types",
+    "bountyxlib:types:json": "yarn run json2ts -i './bountyxlib/resources/schema/' -o 'bountyxlib/types' --cwd './bountyxlib/resources/schema' --no-declareExternallyReferenced",
+    "bountyxlib:build": "yarn bountyxlib:clean && yarn bountyxlib:types:json",
     "prebuild": "prisma generate ; wagmi generate",
     "predev": "prisma generate ; wagmi generate"
   },
@@ -25,8 +27,8 @@
     "npm": ">=7.0.0",
     "node": ">=16.0.0"
   },
-  "packageManager": "pnpm@7.1.8",
   "dependencies": {
+    "@hypercerts-org/hypercerts-sdk": "^0.0.28",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.1",
@@ -85,6 +87,7 @@
     "luxon": "^3.2.1",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
+    "nft.storage": "^7.0.3",
     "query-string": "^8.1.0",
     "react": ">=17",
     "react-dom": ">=17",
@@ -133,6 +136,7 @@
     "eslint-plugin-tailwindcss": "^3.5.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "json-schema-to-typescript": "^12.0.0",
     "jsonwebtoken": "^9.0.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.19",
