Fixed Build - added missing npm libs - added any to some types - removed the radial progress bar for percentage complete

--- a/web/package.json
+++ b/web/package.json
@@ -83,11 +83,13 @@
     "jotai": "^1.13.0",
     "ky": "^0.33.2",
     "ky-universal": "^0.11.0",
+    "lokijs": "^1.5.12",
     "lucide-react": "0.105.0-alpha.4",
     "luxon": "^3.2.1",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "nft.storage": "^7.0.3",
+    "pino-pretty": "^9.4.0",
     "query-string": "^8.1.0",
     "react": ">=17",
     "react-dom": ">=17",
