feat: implement hypercert mintig flow

--- a/web/.env.example
+++ b/web/.env.example
@@ -9,6 +9,8 @@ NEXT_PUBLIC_ALCHEMY_API_KEY=
 # Infura: https://www.infura.io
 NEXT_PUBLIC_INFURA_API_KEY=
 
+CONTRACT_ADDRESS=
+
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Private Variables
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
