--- a/web/package.json
+++ b/web/package.json
@@ -79,6 +79,7 @@
     "ethers": "5.7.2",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.3",
+    "gyp": "^0.5.0",
     "iron-session": "^6.3.1",
     "jotai": "^1.13.0",
     "ky": "^0.33.2",
@@ -89,11 +90,14 @@
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "nft.storage": "^7.0.3",
+    "node-gyp": "^9.3.1",
     "pino-pretty": "^9.4.0",
+    "pkg-config": "^1.1.1",
     "query-string": "^8.1.0",
     "react": ">=17",
     "react-dom": ">=17",
     "react-icons": "^4.7.1",
+    "react-konva": "^18.2.5",
     "react-markdown": "^8.0.4",
     "react-modal": "^3.16.1",
     "react-modal-hook": "^3.0.2",
