--- a/web/package.json
+++ b/web/package.json
@@ -72,6 +72,7 @@
     "@wagmi/chains": "^0.1.7",
     "@wagmi/cli": "^0.1.2",
     "@wagmi/core": "^0.9.0",
+    "alchemy-sdk": "^2.5.0",
     "axios": "^1.2.2",
     "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
