fix: fix env var issue

--- a/web/.env.example
+++ b/web/.env.example
@@ -9,14 +9,14 @@ NEXT_PUBLIC_ALCHEMY_API_KEY=
 # Infura: https://www.infura.io
 NEXT_PUBLIC_INFURA_API_KEY=
 
-CONTRACT_ADDRESS=
+NEXT_PUBLIC_CONTRACT_ADDRESS=
 
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Private Variables
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Hypercerts storage api tokens
-NFT_STORAGE_TOKEN="your-api-token"
-WEB3_STORAGE_TOKEN="your-api-token"
+NEXT_PUBLIC_NFT_STORAGE_TOKEN="your-api-token"
+NEXT_PUBLIC_WEB3_STORAGE_TOKEN="your-api-token"
 
 # Generate one here: https://generate-secret.vercel.app/32
 NEXTAUTH_SECRET=
