--- a/web/package.json
+++ b/web/package.json
@@ -78,6 +78,7 @@
     "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "ellipsize": "^0.5.1",
     "ethers": "5.7.2",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.3",
