fix: update receiver so there is one to one relationship with rewards

--- a/web/.env.example
+++ b/web/.env.example
@@ -11,6 +11,8 @@ NEXT_PUBLIC_INFURA_API_KEY=
 
 NEXT_PUBLIC_CONTRACT_ADDRESS=
 
+NEXT_PUBLIC_HYPERCERT_OWNER_ADDRESS=
+
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 # Private Variables
 # -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
