--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
     "bountyxlib:clean": "rm -rf ./bountyxlib/types",
     "bountyxlib:types:json": "yarn run json2ts -i './bountyxlib/resources/schema/' -o 'bountyxlib/types' --cwd './bountyxlib/resources/schema' --no-declareExternallyReferenced",
     "bountyxlib:build": "yarn bountyxlib:clean && yarn bountyxlib:types:json",
-    "prebuild": "prisma generate ; wagmi generate",
-    "predev": "prisma generate ; wagmi generate"
+    "prebuild": "wagmi generate",
+    "predev": "wagmi generate"
   },
   "lint-staged": {
     "./src": [
@@ -35,7 +35,6 @@
     "@mui/material": "^5.11.11",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "13.1.1",
-    "@prisma/client": "^4.8.1",
     "@radix-ui/react-accessible-icon": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
@@ -157,7 +156,6 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.0",
-    "prisma": "^4.8.1",
     "typescript": "4.9.4"
   }
 }
