--- a/web/package.json
+++ b/web/package.json
@@ -86,6 +86,7 @@
     "framer-motion": "^8.4.3",
     "gyp": "^0.5.0",
     "html-to-react": "^1.5.0",
+    "html2canvas": "^1.4.1",
     "iron-session": "^6.3.1",
     "jotai": "^1.13.0",
     "ky": "^0.33.2",
