--- a/web/package.json
+++ b/web/package.json
@@ -80,6 +80,7 @@
     "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "downloadjs": "^1.4.7",
     "ellipsize": "^0.5.1",
     "ethers": "5.7.2",
     "focus-trap-react": "^10.0.2",
