--- a/web/package.json
+++ b/web/package.json
@@ -88,6 +88,7 @@
     "gyp": "^0.5.0",
     "html-to-react": "^1.5.0",
     "html2canvas": "^1.4.1",
+    "image-downloader": "^4.3.0",
     "iron-session": "^6.3.1",
     "jotai": "^1.13.0",
     "ky": "^0.33.2",
