--- a/web/package.json
+++ b/web/package.json
@@ -91,12 +91,14 @@
     "image-downloader": "^4.3.0",
     "iron-session": "^6.3.1",
     "jotai": "^1.13.0",
+    "keccak256": "^1.0.6",
     "ky": "^0.33.2",
     "ky-universal": "^0.11.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "lucide-react": "0.105.0-alpha.4",
     "luxon": "^3.2.1",
+    "merkletreejs": "^0.3.10",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "nft.storage": "^7.0.3",
