--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -1,9 +1,27 @@
 # Foundry
 cache/
 out/
+## Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
 
 # JS
 node_modules/
+/.pnp
+.pnp.js
+
+# debug
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+
+.env\*.local
+.env
 
 #Hardhat files
 cache_hardhat/
