feat: integrate claim single hyperdrop in ui

--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,8 @@
     "wagmi:init": "wagmi init",
     "wagmi:generate": "wagmi generate -w",
     "bountyxlib:clean": "rm -rf ./bountyxlib/types",
-    "bountyxlib:types:json": "yarn run json2ts -i './bountyxlib/resources/schema/' -o 'bountyxlib/types' --cwd './bountyxlib/resources/schema' --no-declareExternallyReferenced",
-    "bountyxlib:build": "yarn bountyxlib:clean && yarn bountyxlib:types:json",
+    "bountyxlib:types:json": "pnpm json2ts -i './bountyxlib/resources/schema/' -o 'bountyxlib/types' --cwd './bountyxlib/resources/schema' --no-declareExternallyReferenced",
+    "bountyxlib:build": "pnpm bountyxlib:clean && pnpm bountyxlib:types:json",
     "prebuild": "wagmi generate",
     "predev": "wagmi generate",
     "deploy": "cd ../contracts && pnpm run deploy:local && cd ../web"
@@ -32,11 +32,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@hypercerts-org/hypercerts-protocol": "^0.0.10",
-    "@hypercerts-org/hypercerts-sdk": "^0.0.31",
+    "@hypercerts-org/hypercerts-protocol": "*",
+    "@hypercerts-org/hypercerts-sdk": "^0.0.32",
     "@mui/material": "^5.11.11",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "13.1.1",
+    "@openzeppelin/merkle-tree": "^1.0.4",
     "@radix-ui/react-accessible-icon": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
