--- a/web/package.json
+++ b/web/package.json
@@ -118,6 +118,7 @@
     "react-responsive": "^9.0.2",
     "react-spring": "^9.6.1",
     "react-table": "^7.8.0",
+    "react-tagsinput": "^3.20.1",
     "react-toastify": "^9.1.1",
     "react-use-keypress": "^1.3.1",
     "react-wrap-balancer": "^0.3.0",
@@ -139,6 +140,7 @@
     "@types/node": "^17.0.31",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-tagsinput": "^3.20.0",
     "@wagmi/cli": "^1.0.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.51.2",
