--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,8 @@
     "@mui/material": "^5.11.11",
     "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "13.1.1",
+    "@nivo/core": "~0.80.0",
+    "@nivo/pie": "~0.80.0",
     "@openzeppelin/merkle-tree": "^1.0.4",
     "@radix-ui/react-accessible-icon": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.0",
