--- a/web/package.json
+++ b/web/package.json
@@ -84,6 +84,7 @@
     "class-variance-authority": "^0.4.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "d3-scale-chromatic": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ellipsize": "^0.5.1",
     "ethers": "5.7.2",
@@ -137,6 +138,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@svgr/webpack": "^6.5.1",
     "@tsconfig/next": "^1.0.4",
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
     "@types/node": "^17.0.31",
